--- a/DutchTreat/Properties/launchSettings.json
+++ b/DutchTreat/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8888/",
+      "applicationUrl": "http://localhost:8888/app/shop",
       "sslPort": 0
     }
   },
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development2"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "DutchTreat": {
