--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -4,5 +4,11 @@
   },
   "ConnectionStrings": {
     "DutchConnectionString": "server=.\\SqlExpress;Database=DutchTreatDb;Integrated Security=true;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "DutchTreat": "Information",
+      "Microsoft": "Warning"
+    }
   }
 }
