Added a new migration

--- a/DutchTreat/Properties/launchSettings.json
+++ b/DutchTreat/Properties/launchSettings.json
@@ -3,13 +3,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8888/app/shop",
+      "applicationUrl": "http://localhost:8888",
       "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
