--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -10,5 +10,11 @@
       "DutchTreat": "Information",
       "Microsoft": "Warning"
     }
+  },
+  "Tokens": {
+    "Key": "a;lkjasdf;lkajsd;flkjas ;dflkja sd",
+    "Issuer": "http://localhost:8888",
+    "Audience": "users"
   }
+
 }
