--- a/DutchTreat/DutchTreat.csproj
+++ b/DutchTreat/DutchTreat.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\ts\main.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Views\App\About.cshtml" />
     <None Include="Views\App\Shop.cshtml" />
     <None Include="wwwroot\index.html" />
@@ -24,6 +28,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="wwwroot\ts\main.ts" />
   </ItemGroup>
   
 </Project>
