Changed configs to be able to publish locally

--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -2,6 +2,7 @@
   "Colors": {
     "Favorite": "blue"
   },
+  "DisableSSL": false,
   "ConnectionStrings": {
     "DutchConnectionString": "server=.\\SqlExpress;Database=DutchTreatDb;Integrated Security=true;MultipleActiveResultSets=true"
   },
